--- a/certificate.tex
+++ b/certificate.tex
@@ -10,13 +10,13 @@
 {\color{red}{\Large	\bf CERTIFICATE}}\\[0.5cm]
 \end{center}
 
-This is to certify that the project work entitled {\color{blue}"SMART RISK DETECTION AND ANALYSIS FOR ANDROID ECOSYSTEM"} is a bonafide work carried out by Aditi Priya (1SI22CS008), Akriti Kumari (1SI22CS012), Apeksha (1SI22CS025) and Juhi Kumari (1SI22CS075) in partial fulfillment for the award of degree of Bachelor of Engineering in Computer Science \& Engineering from Siddaganga Institute of Technology, an autonomous institute under Visvesvaraya Technological University, Belagavi during the academic year 2024-25. It is certified that all corrections/suggestions indicated for internal assessment have been incorporated in the report deposited in the department library. The Project report has been approved as it satisfies the academic requirements in respect of project work prescribed for the Bachelor of Engineering degree.\\[1.0cm]
-
+This is to certify that the project work entitled {\color{blue}"TITLE OF THE PROJECT IN BLOCK LETTERS"} is a bonafide work carried out by Name1 (USN1), Name2 (USN2), Name3 (USN3) and Name4 (USN4) in partial fulfillment for the award of degree of Bachelor of Engineering in Computer Science \& Engineering from Siddaganga Institute of Technology, an autonomous institute under Visvesvaraya Technological University, Belagavi during the academic year 2025-26. It is certified that all corrections/suggestions indicated for internal assessment have been incorporated in the report deposited in the department library. The Project report has been approved as it satisfies the academic requirements in respect of project work prescribed for the Bachelor of Engineering degree.\\[1.0cm] 
+	
 \begin{tabular}{lll}
-Rajeshwari K R    \hspace*{2cm} &    Dr. N R Sunitha \hspace{2cm} & Dr. S V Dinesh  \\
-Associate Professor   &  Professor and Head  &   Principal      \\
+Name of the Guide    \hspace*{2cm} &    Dr. N R Sunitha \hspace{2cm} & Dr. S V Dinesh  \\
+Designation   &  Head of the Department  &   Principal      \\
 Dept. of CSE   &   Dept. of CSE  & SIT,Tumakuru-03    \\
-SIT,Tumakuru-03  & SIT,Tumakuru-03
+SIT,Tumakuru-03  & SIT,Tumakuru-03                 
 \end{tabular}\\[1.0cm]
 
 
@@ -27,5 +27,6 @@ SIT,Tumakuru-03  & SIT,Tumakuru-03
 
 
 \end{titlepage}
+
 
 
