--- a/acknowledgement.tex
+++ b/acknowledgement.tex
@@ -9,15 +9,15 @@ We deem it as a privilege to thank \textbf{Dr. Shivakumaraiah}, CEO, SIT, Tumaku
 
 We would like to express our sincere gratitude to \textbf{Dr. N R Sunitha}, Professor and Head, Department of CS\&E, SIT, Tumakuru for her encouragement and valuable suggestions.\\
 
-We thank our guide \textbf{Guide's name}, Designation, Department of Computer Science \& Engineering, SIT, Tumakuru for the valuable guidance, advice and encouragement.\\
+We thank our guide \textbf{Rajeshwari KR}, Assistant Professor, Department of Computer Science \& Engineering, SIT, Tumakuru for the valuable guidance, advice and encouragement.\\
 
 
 \begin{flushright}
 \begin{tabular}{ll}
-Name 1 & (USN 1)  \\
-Name 2 & (USN 2)  \\
-Name 3 & (USN 3)  \\
-Name 4 & (USN 4)  \\
+Aman Kumar & (1SI22CS014)  \\
+Ashay Amal & (1SI22CS027)  \\
+Avinash Sarraf & (1SI22CS030)  \\
+Chandragupta Kumar & (1SI22CS046)  \\
 \end{tabular}\\[1.5cm]
 \end{flushright}
 \end{titlepage}
