--- a/certificate.tex
+++ b/certificate.tex
@@ -10,11 +10,12 @@
 {\color{red}{\Large	\bf CERTIFICATE}}\\[0.5cm]
 \end{center}
 
-This is to certify that the project work entitled {\color{blue}"TITLE OF THE PROJECT IN BLOCK LETTERS"} is a bonafide work carried out by Name1 (USN1), Name2 (USN2), Name3 (USN3) and Name4 (USN4) in partial fulfillment for the award of degree of Bachelor of Engineering in Computer Science \& Engineering from Siddaganga Institute of Technology, an autonomous institute under Visvesvaraya Technological University, Belagavi during the academic year 2025-26. It is certified that all corrections/suggestions indicated for internal assessment have been incorporated in the report deposited in the department library. The Project report has been approved as it satisfies the academic requirements in respect of project work prescribed for the Bachelor of Engineering degree.\\[1.0cm] 
+This is to certify that the project work entitled {\color{blue}"ADAPTIVE AND ATTENTIVE NEURAL STYLE TRANSFER FOR DIGITAL ART"} is a bonafide work carried out by Aman Kumar (1SI22CS014), Ashay Amal (1SI22CS027), Avinash Sarraf (1SI22CS030) and Chandragupta Kumar (1SI22CS046) in partial fulfillment for the award of degree of Bachelor of Engineering in Computer Science \& Engineering from Siddaganga Institute of Technology, an autonomous institute under Visvesvaraya Technological University, Belagavi during the academic year 2025-26. It is certified that all corrections/suggestions indicated for internal assessment have been incorporated in the report deposited in the department library. The Project report has been approved as it satisfies the academic requirements in respect of project work prescribed for the Bachelor of Engineering degree.\\[1.0cm] 
 	
 \begin{tabular}{lll}
-Name of the Guide    \hspace*{2cm} &    Dr. N R Sunitha \hspace{2cm} & Dr. S V Dinesh  \\
-Designation   &  Head of the Department  &   Principal      \\
+
+Rajeshwari KR    \hspace*{2cm} &    Dr. N R Sunitha \hspace{2cm} & Dr. S V Dinesh  \\
+Assistant Professor   &  Head of the Department  &   Principal      \\
 Dept. of CSE   &   Dept. of CSE  & SIT,Tumakuru-03    \\
 SIT,Tumakuru-03  & SIT,Tumakuru-03                 
 \end{tabular}\\[1.0cm]
