--- a/cover_page.tex
+++ b/cover_page.tex
@@ -7,28 +7,28 @@
 \begin{center}
 {\Large	 \textbf{Project Report on}}\\[0.5cm]
 
-{\color{black} {{\textbf {\Large \color{red} "Full Title of Major Project"}}}} \\[0.5cm]
+{\color{black} {{\textbf {\Large \color{red} "Adaptive and Attentive Neural Style Transfer for Digital Art"}}}} \\[0.5cm]
 {{\large submitted in partial fulfillment of the requirement for the award of the degree of}} \\
 { \textbf{\large	BACHELOR OF ENGINEERING\\	in\\	 COMPUTER SCIENCE \& ENGINEERING\\}} 
-{\textbf {\large Submitted by}}\\[0.7cm]
+{\textbf {\large Submitted by}}\\[0.1cm]
 	
 \end{center}
 
 
 \begin{center}
-\textbf{\color{green} Batch ID 12}\\
+\textbf{\color{green} Batch ID 5}\\
 \begin{tabular}{ll}
-\color{blue} Name 1 & \color{blue} (USN 1)  \\
-\color{blue} Name 2 & \color{blue} (USN 2)  \\
-\color{blue} Name 3 & \color{blue} (USN 3)  \\
-\color{blue} Name 4 & \color{blue} (USN 4)  \\
+\color{blue} Aman Kumar & \color{blue} (1SI22CS014)  \\
+\color{blue} Ashay Amal & \color{blue} (1SI22CS027)  \\
+\color{blue} Avinash Sarraf & \color{blue} (1SI22CS030)  \\
+\color{blue} Chandragupta Kumar & \color{blue} (1SI22CS046)  \\
 \end{tabular}\\[1.0cm]
 \end{center}
 
 \begin{center}
 under the guidance of
 
-\textbf{\color{green} Guide's Name}\\
+\textbf{\color{green} Rajeshwari KR}\\
 Designation\\
 Department of CSE\\
 SIT, Tumakuru-03\\[1.0cm]
