--- a/cover_page.tex
+++ b/cover_page.tex
@@ -29,7 +29,7 @@
 under the guidance of
 
 \textbf{\color{green} Rajeshwari KR}\\
-Designation\\
+Assistant Professor\\
 Department of CSE\\
 SIT, Tumakuru-03\\[1.0cm]
 \end{center}
